# python-service-template

./: .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  uv.toml
.github/: CODEOWNERS
.github/workflows/: codelint.yaml  unit_tests.yaml
.github/workflows/actions/install-composite/: action.yml
.github/workflows/actions/setup-composite/: action.yml
