[project]
name = "python-service-template"
version = "0.1.0"
description = "A template for creating Python projects."
authors = [{ name = "Amirsalar Sojoudi", email = "amirsalaar@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit>=2.21.0",
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "pytest-env>=0.8.1",
]
black = ["black[d]>=24.10.0"]
isort = ["isort>=5.13.2"]
pylint = ["pylint>=2.17.2"]
mypy = ["mypy>=1.2.0"]

[dependency-groups]
dev = [
    "pre-commit>=2.21.0",
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "pytest-env>=0.8.1",
]
black = ["black[d]>=24.10.0"]
isort = ["isort>=5.13.2"]
pylint = ["pylint>=2.17.2"]
mypy = ["mypy>=1.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.isort]
py_version = 313
profile = "black"
extend_skip = [".md", ".json", ".js", ".ts", ".tsx"]
skip = [".gitignore", ".dockerignore"]
skip_glob = [
    "*/node_modules/*",
    "*/.venv/*",
    "*/venv/*",
    "*/.mypy_cache/*",
    "*/.pytest_cache/*",
    "*/__pycache__/*",
]

[tool.black]
target-version = ['py313']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
