[project]
name = "python-service-template"
version = "0.1.0"
description = "A template for creating Python projects."
authors = [{ name = "Amirsalar Sojoudi", email = "amirsalaar@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit>=2.21.0",
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "pytest-env>=0.8.1",
]
ruff = ["ruff>=0.9.0"]
mypy = ["mypy>=1.2.0"]

[dependency-groups]
dev = [
    "pre-commit>=2.21.0",
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "pytest-env>=0.8.1",
]
ruff = ["ruff>=0.9.0"]
mypy = ["mypy>=1.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["I", "F401", "B006"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
